Closed Bug 1733247 Opened 3 years ago Closed 3 years ago

Cannot disable HTTP3 when TRR is enabled

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- fixed

People

(Reporter: heftig, Assigned: kershaw)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

When network.trr.mode = 3 is set, network.http.http3.enabled = false no longer has an effect and HTTP3 connections are still made.

To test:

mozregression --launch 2021-09-20 -a https://www.cloudflare.com/ -a about:networking --pref network.http.http3.enabled:false network.trr.mode:3

about:networking will show a HTTP/3 connection to www.cloudflare.com.
With the 2021-09-19 nightly, this is not the case.

Last good revision: 89fd324708c584602ee48317c1cd95c140f51b1d
First bad revision: d6d54cc66ce65330f016b917fcced1acc0a32a12
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=89fd324708c584602ee48317c1cd95c140f51b1d&tochange=d6d54cc66ce65330f016b917fcced1acc0a32a12

Regressed by bug 1726528.

Kershaw, can you take a look?

Flags: needinfo?(kershaw)

Changing severity to S3 because of this is a resent regression and the only effect of the bug is that HTTP/3 cannot be disabled by respective pref, but another pref is needed as well. The browsing behavior is not affected.

Severity: -- → S3
Priority: -- → P1
Whiteboard: [necko-triaged]
Assignee: nobody → kershaw
Flags: needinfo?(kershaw)

Set release status flags based on info from the regressing bug 1726528

Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a7ccddaf1154
Check the http3 pref when selecting an npnToken, r=necko-reviewers,dragana
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: