Bug 1733247 - Check the http3 pref when selecting an npnToken, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D127015